portrait spacing fixed

--- a/portrait/dark.scss
+++ b/portrait/dark.scss
@@ -345,6 +345,7 @@ $lighterOpacity: rgba(255,255,255,.15);
       display:inline-block;
       max-width:100%;
       line-height:1.2;
+      padding-top:0;
       overflow:hidden;
       white-space:nowrap;
       text-overflow:ellipsis;
