--- a/portrait/light.scss
+++ b/portrait/light.scss
@@ -344,6 +344,7 @@ $itemBackground: rgba(255,255,255,.5);
       display:inline-block;
       max-width:100%;
       line-height:1.2;
+      padding-top:0;
       overflow:hidden;
       white-space:nowrap;
       text-overflow:ellipsis;
